background image hosted locally

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,13 @@
 body {
-    background: url('https://meggin.com/wp-content/uploads/2012/07/graphic-files-folders-colorful.jpg');
+    /* background: url('https://meggin.com/wp-content/uploads/2012/07/graphic-files-folders-colorful.jpg'); */
+    background: url('/images/graphic-files-folders-colorful.jpg');
     background-size: 100%;
     font-family: 'Play', sans-serif;
     text-align: center;
 }
 
 form {
-    background: white;
+    background: rgba(255, 255, 255, 0.5);
     margin-top: 20px;
     padding-bottom: 8px;
 }
