submit button hide/fade-in functionality added

--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,9 @@
 	<form action="/file-data" method="post" enctype="multipart/form-data">
 		<fieldset>
 			<legend>File Data Check</legend>
-			<input type="file" name="doc">
-			<input type="submit">
+			<input id='browse' type="file" name="doc">
+			<br>
+			<input id='upload' type="submit">
 		</fieldset>
 	</form>
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
